# rastera

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
benchmarks/: _worker.py  run.py  run_merge.py  run_read.py
examples/: index_bench.py  index_demo.py
notebooks/: test.ipynb
rastera/: __init__.py  geo.py  index.py  merge.py  meta.py  reader.py  resampling.py  store.py  vrt.py
rastera/formats/: dimap.py
tests/: conftest.py  test_geo.py  test_index.py  test_live.py  test_merge.py  test_meta.py  test_meta_ifd.py  test_rastera.py  test_resampling.py  test_store.py  test_vrt.py  test_vrt_processed.py
tests/formats/: test_dimap.py
