[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rastera"
version = "0.1.0"
description = "Async raster reader with bounds/window/merge read functionality, based on async-geotiff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "affine>=2.4.0",
    "async-geotiff>=0.3.0",
    "numpy>=2.2.6",
    "pyproj>=3.7.1",
]

[project.optional-dependencies]
index = ["geopandas>=1.0.0", "obstore>=0.9.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: tests that hit real remote services (deselected by default)",
]

[tool.setuptools]
packages = ["rastera"]
