[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rastera"
version = "0.1.0"
description = "Async raster reader with bounds/window/merge read functionality, based on async-geotiff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "affine>=2.4.0",
    "async-geotiff>=0.4.0",
    "numpy>=2.2.6",
    "obstore>=0.9.0",
    "pyproj>=3.7.1",
]

[project.optional-dependencies]
index = ["geopandas>=1.0.0", "pyarrow>=18.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: tests that hit real remote services (deselected by default)",
]

[dependency-groups]
dev = [
    "ruff==0.8.5",
    "pyright>=1.1.408,<2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "boto3>=1.42.93",
]

[tool.ruff]
src = ["rastera"]
line-length = 88
fix = true

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "E501", # line length
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"benchmarks/**/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]
"examples/**/*.py" = ["E501"]
"notebooks/**/*.ipynb" = ["E501", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["rastera"]

[tool.pyright]
include = ["rastera", "tests"]
pythonVersion = "3.11"
strictListInference = true
strictSetInference = true
strictDictionaryInference = true
analyzeUnannotatedFunctions = true
reportUnknownMemberType = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportMissingParameterType = "error"
reportMatchNotExhaustive = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportMissingTypeArgument = "error"
reportDeprecated = "error"

[tool.setuptools]
packages = ["rastera"]
